# cdc_audit

./: .gitignore  README.md  consumer.py  docker-compose.yaml  pyproject.toml  requirements.txt  test_consumer.py  test_producer.py
db/: db.py
extra_test/: extra2.yaml  extra_test.yaml
refactored/: REFACTORING_SUMMARY.md
refactored/docker/: Dockerfile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  env.example
refactored/docker/init-db/: 01-init-databases.sql
refactored/docs/: API.md  README.md
refactored/src/: main.py
refactored/src/config/: __init__.py  loader.py  settings.py  validator.py
refactored/src/consumer/: __init__.py  consumer.py  transformer.py
refactored/src/core/: logging.py
refactored/src/monitoring/: __init__.py  middleware.py  service.py
refactored/tests/: __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.py
refactored/tests/integration/: test_consumer_pipeline.py
refactored/tests/unit/: test_database_repository.py  test_transformer.py
scripts/: create.sql  init.sql  postgres-source-connector.json  reference.txt
