[tool.poetry]
name = "cdc-audit"
version = "0.1.0"
description = ""
authors = ["nevesgil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.8.0"
sqlalchemy = "^2.0.37"
taos-ws-py = "^0.3.8"
schedule = "^1.2.2"
requests = "^2.32.3"
aiohttp = "^3.11.11"
black = "^24.10.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
