[tool.poetry]
name = "cdc-audit"
version = "0.1.0"
description = ""
authors = ["nevesgil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
psycopg = "^3.2.4"
confluent-kafka = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
