[tool.poetry]
name = "cdc-audit"
version = "0.1.0"
description = ""
authors = ["nevesgil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
aiohttp = "^3.11.11"
faker = "^35.1.0"
kafka-python = "^2.0.2"
confluent-kafka = "2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
